--- a/frontend/src/pages/courses/courses.module.css
+++ b/frontend/src/pages/courses/courses.module.css
@@ -35,3 +35,9 @@
   font-size: 0.9375rem;
   line-height: 1.4;
 }
+
+.stateText {
+  margin: 0;
+  font-size: 1rem;
+  color: var(--color-text-secondary);
+}
