--- a/frontend/src/features/ui/layout/layout.module.css
+++ b/frontend/src/features/ui/layout/layout.module.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: minmax(15rem, 18rem) 1fr;
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   background: radial-gradient(
     circle at top,
     #efe7d2 0%,
@@ -17,4 +17,5 @@
 
 .mainContent {
   padding: 2rem;
+  overflow-y: scroll;
 }
